# RoboVerse

./: .gitignore
dashboard/: conf.yml
roboverse_learn/: CLAUDE.md  README.md  libero_act_pi0_openvla.md  libero_dp.md
roboverse_learn/il/: data2zarr_dp.py
roboverse_learn/il/act/: act_eval_runner.py  act_run_libero.sh  act_run_libero_remaining.sh  ckpt_dir_path.txt  eval_all_fixed.sh
roboverse_learn/il/dp/: README.md  dp_random_level_run.sh  dp_run.sh  gen_rand_level_report.py  gen_report.py
roboverse_learn/il/dp/models/: ddim_unet_image_policy.py  ddpm_image_policy.py  score_unet_image_policy.py
roboverse_learn/il/dp/runner/: dp_runner.py
roboverse_learn/il/utils/act/: train.py
roboverse_learn/il/utils/common/: eval_args.py  replay_buffer.py
roboverse_learn/il/utils/diffusion_policy/: pyproject.toml
roboverse_learn/il/utils/diffusion_policy/diffusion_policy/common/: replay_buffer.py
roboverse_learn/vla/: README.md  requirements_venv311.txt
roboverse_learn/vla/OpenVLA/: README.md  eval_libero.sh  finetune.sh  requirements_openvla.txt  setup_env.sh  vla_eval.py
roboverse_learn/vla/pi0/: README.md  eval_libero.sh  eval_libero_lora.sh  openpi_config_patch.py  pi_eval.py  start_server.sh  train_pi0.sh
roboverse_pack/tasks/gpt/: __init__.py  gpt_base.py  sauce_sandwich.py
roboverse_pack/tasks/libero/: libero_base.py  libero_pick_alphabet_soup.py
scripts/advanced/: collect_demo.py  collect_demo_multi.py  collect_demo_multi_zhexi.py  collect_demo_sr.py  gpt_gen.py  rand_level_collect.sh  readme_zhexi.md  replay_demo.py  rescale.py  urdf_to_mjcf.py
(+3 files in other folders)
