[build-system]
requires = ["flit_core >=3.7,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "diffusion_policy"
version = "0.1.0"
description = "Diffusion policy for RoboVerse"
requires-python = ">=3.8"
dependencies = [
    "zarr>=3.0",
    "ipdb",
    "gpustat",
    "omegaconf",
    "hydra-core>=1.3",
    "dill>=0.3.5",
    "einops==0.4.1",
    "diffusers",
    "numba",
    "moviepy",
    "imageio",
    "av",
    "matplotlib",
    "termcolor",
    "huggingface_hub",
    "pillow",
]
